# grotto_rank_endpoint

./: manage.py  pyproject.toml
grotto_rank_endpoint/: asgi.py  settings.py  urls.py  wsgi.py
render/templates/render/: index.html
