[tool.poetry]
name = "grotto-rank-endpoint"
version = "0.1.0"
description = ""
authors = ["Robotex140 <57817292+robotex140@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "grotto_rank_endpoint"}]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.2"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
